--- a/src/stylesheets/colors.css
+++ b/src/stylesheets/colors.css
@@ -2,11 +2,19 @@ body
 {
     background-image: radial-gradient(circle at center, #447daf 15%, #6695be,#447daf, #80a5c5);
     color:#cdebf7;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    padding-bottom: 60px;
+}
+footer
+{
+    position: absolute;
+    bottom: 0;
+    width:100%;
+    height:60px;
 }
 img
 {
-    max-width: 50%;
+    max-width: 125%;
     filter: brightness(1.35);
     border-width: 3px;
     border-style: solid;
@@ -22,20 +30,47 @@ img:hover
     cursor: pointer;
     box-shadow: 5px 5px 10px #173744;
     transform: scale(105%);
+    filter:blur(1px);
     transition: transform 0.15s linear;
 }
 header
 {
-    background-image: linear-gradient(to bottom, #6fe72a, #10a8a0);
+    background-image: linear-gradient(to bottom, #e5ffd7, #10a8a0);
     border-width: 2px;
     border-style: solid;
-    border-image: linear-gradient(to bottom, #6aff3d, #41ffef);
+    border-image: linear-gradient(to bottom, #f5fff2, #41ffef);
     border-image-slice: 1;
     padding: 1rem;
     font-weight: bolder;
     text-decoration: underline;
 }
+nav
+{
+    background-color: #bae2ff;
+    border-width: 5px;
+    border-style: solid;
+    border-image: linear-gradient(to bottom, #fcfffc, #ccfffb);
+    border-image-slice: 1;
+    padding: 1rem;
+}
 p
 {
     font-size: 18px;
+}
+a
+{
+    text-decoration: none;
+}
+a:hover
+{
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 115%;
+}
+hr
+{
+    border-width: 5px;
+    border-style: solid;
+    border-image: linear-gradient(to bottom, #f5fff5, #ccfffb);
+    border-image-slice: 1;
 }
