--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -18,27 +18,29 @@ body
 {
     text-align: center;
 }
+.vl
+{
+    border-left: 5px solid white;
+    height: 543px;
+    display: flex;
+}
 .clearfix::after
 {
     content:"";
-    display: table;
     clear:both;
+    display: table;
 }
 .pull-left
 {
-    padding: 1rem;
     margin:0 5px;
     float:left;
-    width: 30%;
+    width: 40%;
     text-align: left;
-    line-height: 565.75px;
 }
 .pull-right
 {
-    padding: 1rem;
     margin:0 5px;
     float:right;
-    width: 30%;
+    width: 40%;
     text-align: left;
-    line-height: 565.75px;
 }
